--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "course-site",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Elliot-Crowder.github.io/Intro-To-Programming_Site",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
